--- a/src/components/SwipeDemo/SwipeDemo.module.css
+++ b/src/components/SwipeDemo/SwipeDemo.module.css
@@ -81,7 +81,7 @@
 
 .cardsContainer {
   position: relative;
-  height: 580px;
+  height: 540px;
   width: 100%;
   max-width: 320px;
   display: flex;
@@ -335,7 +335,7 @@
 
   .cardsContainer {
     max-width: 400px;
-    height: 640px;
+    height: 600px;
   }
 
   .btnReject, .btnAccept {
